fix content jumping while scrollbar appears

--- a/src/variables.module.scss
+++ b/src/variables.module.scss
@@ -3,3 +3,7 @@ $small: "screen and (max-width: 39.9375em)";
 $medium: "screen and (min-width: 40em) and (max-width: 63.9375em)";
 
 $large: "screen and (min-width: 64em)";
+
+html { // fix content jump while scrollbar appears
+  margin-left: calc(100vw - 100%);
+}
